--- a/assets/css/main.sass
+++ b/assets/css/main.sass
@@ -14,6 +14,18 @@ $headerHeight : 100vh/12
     padding: 0
     box-sizing: border-box
 
+::-webkit-scrollbar
+    width: 5px
+    background: rgba(0,0,0,0.1)
+::-webkit-scrollbar-track
+    border-radius: 10px
+    opacity: .5
+::-webkit-scrollbar-thumb
+    border-radius: 10px
+    background: rgba(0,0,0,0.5)
+    opacity: .1
+
+
 body
     font-size: 18px
     font-family: 'Oxygen', 'Ubuntu', sans-serif
