--- a/index.pug
+++ b/index.pug
@@ -30,15 +30,44 @@ html
                                         a(href="#").nav-link About
                                     li.nav-item
                                         a(href="#").nav-link Contact
-                            .col-md-12
+                            .col-md-12.social
                                 h1 Find us on social media
-
+                                .col-md-6.icons
+                                    i.ion-social-github
+                                    i.ion-social-instagram
+                                    i.ion-social-facebook
+                                    i.ion-social-twitter
             .header
                 h2
                     a(href="#").navbar-brand FUBIZ
-            .container-fluid.content
-                .container.justify-content-center
-                    h1 HELLO!
+            .content
+                .posts
+                    .post#img1
+                        .postInfo
+                            .postName Poly filled Adversaries
+                            .postAuthor
+                                .avatar#av1
+                                .name Audrey Roman
+                    .post#img2
+                        .postInfo
+                            .postName The rays of beauty
+                            .postAuthor
+                                .avatar#av2
+                                .name Sally Smith
+                    .post#img3
+                        .postInfo
+                            .postName Imagination beyond horizon
+                            .postAuthor
+                                .avatar#av3
+                                .name Melony Mac
+                    .post#img4
+                        .postInfo
+                            .postName People united
+                            .postAuthor
+                                .avatar#av4
+                                .name Julie Pit
+            .footer
+
         script(src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous")
         script(src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous")
