--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -181,7 +181,44 @@ body {
 .footer {
   min-width: 100%;
   min-height: 400px;
-  background: #0090C1; }
+  background: #001e28;
+  color: #FFF;
+  padding-bottom: 3em; }
+  .footer .container {
+    margin-top: 2em; }
+    .footer .container h1 {
+      font-size: 30px; }
+    .footer .container .author {
+      text-align: center;
+      overflow: hidden;
+      margin: 0.5em;
+      background: #FFF;
+      border-radius: 5px;
+      padding-bottom: 2em;
+      min-width: 100px;
+      min-height: 350px;
+      display: flex;
+      flex-flow: column wrap;
+      justify-content: flex-start;
+      font-size: 30px; }
+      .footer .container .author h1 {
+        color: #888;
+        margin-top: 1em;
+        margin-bottom: 1em; }
+      .footer .container .author .r {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: center;
+        padding: 1em; }
+        .footer .container .author .r .author-pic {
+          min-width: 250px;
+          min-height: 250px;
+          max-width: 250px;
+          border-radius: 100%;
+          background: url("../img/author.jpg") no-repeat;
+          background-size: 100%;
+          background-position: center;
+          margin-bottom: 1em; }
 
 #img1 {
   background: url("https://images.unsplash.com/photo-1454789591675-556c287e39e2?dpr=1&auto=compress,format&fit=crop&w=1200&h=300&q=100&cs=tinysrgb&crop=") no-repeat;
