--- a/index.pug
+++ b/index.pug
@@ -67,6 +67,16 @@ html
                                 .avatar#av4
                                 .name Julie Pit
             .footer
+                .container
+                    h1 That's it for now, come back later!
+                    .row
+                        .col-md-6.col-sm-12
+                            .author
+                                h1 Author
+                                .r
+                                    .author-pic
+                                .name
+                                    a(href="#") buoyantair
 
         script(src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous")
